Embedded Graal native image build configs, at least for the default cases

--- a/pom.xml
+++ b/pom.xml
@@ -664,6 +664,7 @@ limitations under the License.]]></inlineHeader>
             <include>**/pom.xml</include>
           </includes>
           <excludes>
+            <exclude>src/**/native-image.properties</exclude>
             <exclude>**/src/main/config/ide/**</exclude>
           </excludes>
           <mapping>
